crates/tui/snapshots/inline/chat_view/accounting_bottom_statusline_inline.snap
---
source: crates/tui/src/app/chat_view_tests.rs
expression: text(&buffer)
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
> keep this draft                                                               
────────────────────────────────────────────────────────────────────────────────
  cache hit 75.0% · cost $0.01008                                               
  ⏸ Manual
