crates/tui/snapshots/inline/chat_view/configured_statusline_inline.snap
---
source: crates/tui/src/app/chat_view_tests.rs
expression: text(&before)
---
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
────────────────────────────────────────────────────────────────────────────────────────────────────
> keep this draft                                                                                   
────────────────────────────────────────────────────────────────────────────────────────────────────
  Shared model (high) · branch-layout · context unknown · Plan                                      
  ⏸ Manual
