crates/tui/snapshots/inline/chat_view/dictation_and_permission_inline.snap
---
source: crates/tui/src/app/chat_view_tests.rs
expression: text(&buffer)
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  Dictation · loading model · ctrl+c to stop dictation                          
────────────────────────────────────────────────────────────────────────────────
>                                                                               
────────────────────────────────────────────────────────────────────────────────
  Shared model (high) · branch-layout · context unknown · Plan                  
  ⏸ Manual · ← Dashboard · ? for shortcuts
