crates/tui/snapshots/inline/chat_view/disabled_statusline_inline.snap
---
source: crates/tui/src/app/chat_view_tests.rs
expression: text(&hidden)
---
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
────────────────────────────────────────────────────────────────────────────────────────────────────
> keep this draft                                                                                   
────────────────────────────────────────────────────────────────────────────────────────────────────
